fix: standardize ENV var names

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,13 @@
 # Copy this file to .env and fill in the actual values from GitHub secrets
 
 # GraphQL API Endpoints
-DEV_GRAPHQL_ENDPOINT=https://devapi.sboc.us/graphql
-PRODUCTION_GRAPHQL_ENDPOINT=https://api.tacklehunger.org/graphql
+TKH_GRAPHQL_API_URL=https://devapi.sboc.us/graphql
 
 # API Authentication
 AI_SCRAPING_TOKEN=your_ai_scraping_token_here
 
-# Environment Selection (staging|production)
-ENVIRONMENT=staging
+# Environment Selection (dev|copilot|staging|production)
+ENVIRONMENT=dev
 
 # AI/ETL Operation Identifiers
 CREATED_METHOD=AI_Copilot_Assistant
